纠正计算数据的细节问题
